# gfs

./: .gitignore  CMakeLists.txt  README.md
include/: client.h  cserver.h  gfs.h  gfsclient.h  master.h
protos/: gfs.proto
src/: client.cpp  cserver.cpp  gfs.cpp  gfsclient.cpp  master.cpp
